<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <TextView
        style="@style/MyTitleStyle"
        android:layout_height="wrap_content"
        android:text="@string/song" />

    <TextView
        android:id="@+id/name_song"
        style="@style/MyTextStyle"
        android:text="@string/replica" />

    <TextView
        style="@style/MyTitleStyle"
        android:text="@string/band" />

    <TextView
        android:id="@+id/name_band"
        style="@style/MyTextStyle"
        android:text="@string/the_xx" />

    <TextView
        style="@style/MyTitleStyle"
        android:text="@string/style" />

    <TextView
        android:id="@+id/music_style"
        style="@style/MyTextStyle"
        android:text="@string/indie_rock" />

    <Button
        android:id="@+id/play_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play" />

    <Button
        android:id="@+id/pause_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pause" />

    <Button
        android:id="@+id/stop_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop" />

</LinearLayout>